--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
 	        <small>
 	            <a href="#">Contact Info</a>
 	            <div id="contact_info" style="display:none">
-	                <h3>Adam Strickland</h3>
-	                <a href="mailto:adam.strickland@gmail.com">adam.strickland@gmail.com</a>
+	                <h3>Manuel Pichardo</h3>
+	                <a href="mailto:mail@manuelpm.me">mail@manuelpm.me</a>
 	                <h4>214.906.3350</h4>
 									<div id="connections">
 										<br/>
 										<span>
-											<a href="http://github.com/adamstrickland" title="github"><img class="connection" src="./icon-github.png"/></a>
-											<a href="http://facebook.com/adamis42" title="facebook"><img class="connection" src="./icon-facebook.gif"/></a>
-											<a href="http://twitter.com/adamstrickland" title="twitter"><img class="connection" src="./icon-twitter.gif"/></a>
-											<a href="http://www.linkedin.com/in/warriorpoet" title="linked-in"><img class="connection" src="./icon-linkedin.png"/></a>
+											<a href="https://github.com/manuelmarcano22" title="github"><img class="connection" src="./icon-github.png"/></a>
+											<a href="https://www.facebook.com/manuelmarcano22" title="facebook"><img class="connection" src="./icon-facebook.gif"/></a>
+											<a href="https://twitter.com/ManuelMarcano" title="twitter"><img class="connection" src="./icon-twitter.gif"/></a>
+											<!--<a href="http://www.linkedin.com/in/warriorpoet" title="linked-in"><img class="connection" src="./icon-linkedin.png"/></a> -->
 										</span>
 									</div>
 	            </div>
