--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8"/>
-		<title>Adam Strickland</title>
+		<title>Manuel Picharo M</title>
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -32,7 +32,7 @@
 	            <div id="contact_info" style="display:none">
 	                <h3>Manuel Pichardo</h3>
 	                <a href="mailto:mail@manuelpm.me">mail@manuelpm.me</a>
-	                <h4>214.906.3350</h4>
+	                <h4>+33.751.906.3350</h4>
 									<div id="connections">
 										<br/>
 										<span>
@@ -48,10 +48,33 @@
 	    
 		<section id="content">
 			<header>
-				<h1>Adam Strickland</h1>
-				<h2>Technologist, entrepreneur, warrior-poet</h2>
+				<h1>Manuel Pichardo Marcano</h1>
+				<h2>Physics Master's Student.</h2>
 			</header>
-			
+		
+			<h3>Work</h3>
+                        <ul>
+                                <li><a href="./work.html" title="Work">About Me</a></li>
+                                <li><a href="http://manuelmarcano22.github.io/papers/cv.pdf" title="Curriculum Vitae">CV</a></li>
+                                <li><a href="./code.html" title="code">Code</a></li>
+                                <li><a href="./pubs.html" title="Publications">Publications</a></li>
+                                <li><a href="./research.html" title="Research">Research</a></li>
+                                <li><a href="./outreach.html" title="outreach">Outreach</a></li>
+
+                        </ul>
+
+<!-- THis is from http://katyhuff.github.io/ 			
+                        <h3>Play</h3>
+                        <ul>
+                                <li><a href="./social.html" title="Follow Me">Follow Me</a></li>
+                                <li><a href="http://thehackerwithin.github.io" title="hackerwithin">The Hacker Within</a></li>
+                                <li><a href="http://www.stanford.edu/~borman" title="My Husband">My Husband, Strom</a></li>
+                                <li><a href="http://nuclearpride.wordpress.com"title="NuclearPride">Nuclear Pride</a></li>
+                                <li><a href="http://www.software-carpentry.org/pages/team.html" title="software carpentry">Software Carpentry</a></li>
+                        </ul>
+
+			-->
+
 			
 		</section>
 		
