--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
 	        <small>
 	            <a href="#">Contact Info</a>
 	            <div id="contact_info" style="display:none">
-	                <h3>Manuel Pichardo</h3>
+	                <h3>Manuel Pichardo M.</h3>
 	                <a href="mailto:mail@manuelpm.me">mail@manuelpm.me</a>
-	                <h4>+33.751.906.3350</h4>
+	                <h4>+33 7 51 34 74 24</h4>
 									<div id="connections">
 										<br/>
 										<span>
 											<a href="https://github.com/manuelmarcano22" title="github"><img class="connection" src="./icon-github.png"/></a>
+<!--
 											<a href="https://www.facebook.com/manuelmarcano22" title="facebook"><img class="connection" src="./icon-facebook.gif"/></a>
 											<a href="https://twitter.com/ManuelMarcano" title="twitter"><img class="connection" src="./icon-twitter.gif"/></a>
-											<!--<a href="http://www.linkedin.com/in/warriorpoet" title="linked-in"><img class="connection" src="./icon-linkedin.png"/></a> -->
+											<a href="http://www.linkedin.com/in/warriorpoet" title="linked-in"><img class="connection" src="./icon-linkedin.png"/></a> -->
 										</span>
 									</div>
 	            </div>
@@ -52,28 +53,24 @@
 				<h2>Physics Master's Student.</h2>
 			</header>
 		
-			<h3>Work</h3>
+			<h3>School</h3>
                         <ul>
-                                <li><a href="./work.html" title="Work">About Me</a></li>
+                                <li><a href="./about.html" title="Work">About Me</a></li>
                                 <li><a href="http://manuelmarcano22.github.io/papers/cv.pdf" title="Curriculum Vitae">CV</a></li>
                                 <li><a href="./code.html" title="code">Code</a></li>
                                 <li><a href="./pubs.html" title="Publications">Publications</a></li>
                                 <li><a href="./research.html" title="Research">Research</a></li>
-                                <li><a href="./outreach.html" title="outreach">Outreach</a></li>
 
                         </ul>
 
-<!-- THis is from http://katyhuff.github.io/ 			
-                        <h3>Play</h3>
+                        <h3>Other Interests</h3>
                         <ul>
-                                <li><a href="./social.html" title="Follow Me">Follow Me</a></li>
-                                <li><a href="http://thehackerwithin.github.io" title="hackerwithin">The Hacker Within</a></li>
-                                <li><a href="http://www.stanford.edu/~borman" title="My Husband">My Husband, Strom</a></li>
-                                <li><a href="http://nuclearpride.wordpress.com"title="NuclearPride">Nuclear Pride</a></li>
-                                <li><a href="http://www.software-carpentry.org/pages/team.html" title="software carpentry">Software Carpentry</a></li>
+				
+
+			<li><a href="./outreach.html" title="outreach">Outreach</a></li>
+                        <li><a href="https://www.postcrossing.com/user/mmarcano22" title="postcards">Postcrossing</a></li>
                         </ul>
 
-			-->
 
 			
 		</section>
