--- a/about.html
+++ b/about.html
@@ -26,19 +26,37 @@
         </script>
 	</head>
 	<body>
+	    <header>
+	        <small>
+	            <a href="#">Contact Info</a>
+	            <div id="contact_info" style="display:none">
+	                <h3>Manuel Pichardo M.</h3>
+	                <a href="mailto:mail@manuelpm.me">mail@manuelpm.me</a>
+	                <h4>+33 7 51 34 74 24</h4>
+									<div id="connections">
+										<br/>
+										<span>
+											<a href="https://github.com/manuelmarcano22" title="github"><img class="connection" src="./icon-github.png"/></a>
+</span>
+									</div>
+	            </div>
+	        </small>
+	    </header>
+
+
                         <section id="content">
                         <header>
                         <h1>I am</h1>
-                        <h2>physics master's student <br>
+                        <h2>a physics master's student <br>
                         </header>
 
                         <p>
-                        ... part of the the <a href="http://spacemaster.eu/">Erasmus Mundus Joint European Master in Space Science and Technology</a> 
+                        ... part of the the two year Erasmus Mundus<a href="http://spacemaster.eu/"> Joint European Master in Space Science and Technology</a>. 
 					       
 			</p>
                         <h2>Currently</h2>
                         <p>
-                        ... I am in my last year of the masters at the Université Paul Sabatier Toulouse III in France <a href="http://ezomp2.omp.obs-mip.fr/asep/">(Master ASEP)</a>.                        <!--
+                        ... in my last year of the masters at the Université Paul Sabatier Toulouse III in France <a href="http://ezomp2.omp.obs-mip.fr/asep/">(Master ASEP)</a>.                        <!--
                         </p>
                         <h2>My research interests</h2>
                         <p>... focus on the scientific pursuit of a safe,
@@ -54,27 +72,15 @@
                                 computing</a>.
                         </p>
 			-->
-                        <h2>My education</h2>
-                        <p>
-			I completed my Bachelor of Science in Physics from                         <a href="http://www.usu.edu/">Utah State University</a> in Logan, UT.
+			<h2>My education</h2>
 
-                        <!--... began in <a href="http://bellville.com">Logan, Utah</a> and
-                        continued at the <a href="http://www.tams.unt.edu">Texas Academy
-                                of Mathematics and Science</a> program during which I spent
-			-->
-				
-                        This was followed by undergraduate physics at
-                        <a href="http://www.uchicago.edu">The University of Chicago</a>.
-                        In the summer of 2006 I worked with
-                        <a href="http://www.dfi.uchile.cl">el Departamento de Fisica</a>
-			. My final semesters in Utah I was working with <a href="http://sciencejedi.com/professional/">Dr. Larson.</a> If you are interested in the description of such past projects please read my <a href="http://manuelmarcano22.github.io/papers/cv.pdf">CV</a>
-                        or check out some of the posters in the <a href="./pubs.html">publications</a> page.
+			<h3>My Undergraduate</h3> 
+                        <p>
+			... in Physics is from <a href="http://www.usu.edu/">Utah State University</a> in Logan, UT. During those four years I was lucky enough to participate in two undergraduate research experience and gain research experience at Utah State University. In the summer of 2012, I worked at <a href='http://www.stanford.edu/'>Stanford university</a> as part of the <a href='https://oma.stanford.edu/surge/'>SURGE</a> program. In the summer of 2013, I work at the <a href='https://www2.hao.ucar.edu/'>High Altitude Observatory</a>  as part of the <a href='http://lasp.colorado.edu/home/education/reu/'>LASP REU</a>. My final semesters in Utah I was working in a research project with <a href="http://sciencejedi.com/professional/">Dr. Larson</a> in the area of Gravitational Wave Astronomy. If you are interested in the description of such past projects please read my <a href="http://manuelmarcano22.github.io/papers/cv.pdf">CV</a> or check out some of the posters and preprint in the <a href="./pubs.html">publications</a> page.
                         </p>
-                        <h2>My Masters</h2>
+                        <h3>My Masters</h3>
                         <p>
-		
-fdf
-
+			... will in Space Science and Technology part of the Erasmus Mundus <a href='http://spacemaster.eu/'>SpaceMaster</a> program. It took me to four different universities and four different countries to take courses in Germany at the <a href='http://www.uni-wuerzburg.de/en/ueber/university/'>University of Würzburg</a>, above the arctic circle in <a href='http://www.ltu.se/?l=en'>Luleå University of Technology</a>, in France at  <a href='http://www.univ-tlse3.fr/'>Université Paul Sabatier</a>, and do another summer project at the <a href='http://www.gla.ac.uk/'>University of Glasgow</a>.
 			</p>
                         <footer>
                         <small>forked from <br><a href="http://kiwigrove.com/" title="Kiwi Grove">Kiwi Grove</a></small>
