--- a/outreach.html
+++ b/outreach.html
@@ -37,45 +37,31 @@
 										<br/>
 										<span>
 											<a href="https://github.com/manuelmarcano22" title="github"><img class="connection" src="./icon-github.png"/></a>
-<!--
-											<a href="https://www.facebook.com/manuelmarcano22" title="facebook"><img class="connection" src="./icon-facebook.gif"/></a>
-											<a href="https://twitter.com/ManuelMarcano" title="twitter"><img class="connection" src="./icon-twitter.gif"/></a>
-											<a href="http://www.linkedin.com/in/warriorpoet" title="linked-in"><img class="connection" src="./icon-linkedin.png"/></a> -->
-										</span>
+</span>
 									</div>
 	            </div>
 	        </small>
 	    </header>
-	    
-		<section id="content">
-			<header>
-				<h1>Manuel Pichardo Marcano</h1>
-				<h2>Physics Master's Student.</h2>
-			</header>
-		
-			<h3>School</h3>
-                        <ul>
-                                <li><a href="./about.html" title="Work">About Me</a></li>
-                                <li><a href="http://manuelmarcano22.github.io/papers/cv.pdf" title="Curriculum Vitae">CV</a></li>
-                                <li><a href="./pubs.html" title="Publications">Publications</a></li>
-				<!--        <li><a href="./research.html" title="Research">Research</a></li>  -->
+                        <section id="content">
+                        <header>
+                        <h1>Outreach</h1>
+			<h2>Getting science to the public </h2>
+                        </header>
+ <p>
 
-                        </ul>
+                        <big><b>I am very interested in science outreach both in English and Spanish (my native language). This are some projects I have been involved. </big></b></p>
 
-                        <h3>Other Interests</h3>
-                        <ul>
-				
-
-			<li><a href="./outreach.html" title="outreach">Outreach</a></li>
-                        <li><a href="https://www.postcrossing.com/user/mmarcano22" title="postcards">Postcrossing</a></li>
-                        </ul>
-
-
+                        <h3> Astrobitos </h3>
+			<a href='astrobitos.org'>Astrobitos</a> is the sister site in Spanish of <a href='astrobites.com'>Astrobites</a>. 
 			
-		</section>
-		
-		<footer>
-			<small>Design from <br><a href="http://kiwigrove.com/" title="Kiwi Grove">Kiwi Grove</a></small>
-		</footer>
-	</body>
-</html>
+                <h2>Spread the voice in Spanish!</h2>
+                        <p>
+
+			If you are interested to created or translate existing material from English to Spanish I might be able to help. Please feel free to contact me <a href="mailto:manuelmarcano22@yahoo.com">via email</a> </p>
+                        </section>
+                        <footer>
+                        <small>forked from <br><a href="http://kiwigrove.com/" title="Kiwi Grove">Kiwi Grove</a></small>
+                        </footer>
+                </div>
+        </body>
+</html> 
