--- a/pubs.html
+++ b/pubs.html
@@ -37,45 +37,49 @@
 										<br/>
 										<span>
 											<a href="https://github.com/manuelmarcano22" title="github"><img class="connection" src="./icon-github.png"/></a>
-<!--
-											<a href="https://www.facebook.com/manuelmarcano22" title="facebook"><img class="connection" src="./icon-facebook.gif"/></a>
-											<a href="https://twitter.com/ManuelMarcano" title="twitter"><img class="connection" src="./icon-twitter.gif"/></a>
-											<a href="http://www.linkedin.com/in/warriorpoet" title="linked-in"><img class="connection" src="./icon-linkedin.png"/></a> -->
-										</span>
+</span>
 									</div>
 	            </div>
 	        </small>
 	    </header>
-	    
-		<section id="content">
-			<header>
-				<h1>Manuel Pichardo Marcano</h1>
-				<h2>Physics Master's Student.</h2>
-			</header>
-		
-			<h3>School</h3>
-                        <ul>
-                                <li><a href="./about.html" title="Work">About Me</a></li>
-                                <li><a href="http://manuelmarcano22.github.io/papers/cv.pdf" title="Curriculum Vitae">CV</a></li>
-                                <li><a href="./pubs.html" title="Publications">Publications</a></li>
-				<!--        <li><a href="./research.html" title="Research">Research</a></li>  -->
+                        <section id="content">
+                        <header>
+                        <h1>Work</h1>
+                        </header>
+                        <p>
 
-                        </ul>
-
-                        <h3>Other Interests</h3>
-                        <ul>
-				
-
-			<li><a href="./outreach.html" title="outreach">Outreach</a></li>
-                        <li><a href="https://www.postcrossing.com/user/mmarcano22" title="postcards">Postcrossing</a></li>
-                        </ul>
-
-
+                        <h2>Please download my papers and talks here</h2>
 			
-		</section>
-		
-		<footer>
-			<small>Design from <br><a href="http://kiwigrove.com/" title="Kiwi Grove">Kiwi Grove</a></small>
-		</footer>
-	</body>
-</html>
+			<ul>
+                                <li>
+					Limiting alternative theories of gravity using gravitational wave observations across the spectrum.
+                                <br /> November 2014.
+                                 [<a href="http://arxiv.org/abs/1311.3153">preprint</a>]
+                                </li>
+			</ul>
+
+			<ul>
+                                <li>
+					Big Flare Hunting
+                                <br /> August 2013.
+                                 [<a href="http://manuelmarcano22.github.io/piapers/posterhao.pdf">Poster</a>]
+                                </li>
+			</ul>
+
+
+			<ul>
+                                <li>
+					Measuring Water Level Fluctuations of Two Connected Welands in the Dominican Reublic Using InSAR.
+                                <br /> August 2012.
+                                 [<a href="http://manuelmarcano22.github.io/piapers/posterhao.pdf">Poster</a>]
+                                </li>
+			</ul>
+
+
+                        </section>
+                        <footer>
+                        <small>forked from <br><a href="http://kiwigrove.com/" title="Kiwi Grove">Kiwi Grove</a></small>
+                        </footer>
+                </div>
+        </body>
+</html> 
