--- a/pubs.html
+++ b/pubs.html
@@ -62,7 +62,7 @@
                                 <li>
 					Big Flare Hunting
                                 <br /> August 2013.
-                                 [<a href="http://manuelmarcano22.github.io/piapers/posterhao.pdf">Poster</a>]
+                                 [<a href="http://manuelmarcano22.github.io/papers/posterhao.pdf">Poster</a>]
                                 </li>
 			</ul>
 
@@ -71,7 +71,7 @@
                                 <li>
 					Measuring Water Level Fluctuations of Two Connected Welands in the Dominican Reublic Using InSAR.
                                 <br /> August 2012.
-                                 [<a href="http://manuelmarcano22.github.io/piapers/posterhao.pdf">Poster</a>]
+                                 [<a href="http://manuelmarcano22.github.io/papers/posterhao.pdf">Poster</a>]
                                 </li>
 			</ul>
 
