--- a/outreach.html
+++ b/outreach.html
@@ -31,7 +31,7 @@
 	            <a href="#">Contact Info</a>
 	            <div id="contact_info" style="display:none">
 	                <h3>Manuel Pichardo M.</h3>
-	                <a href="mailto:mail@manuelpm.me">mail@manuelpm.me</a>
+	                <a href="mailto:manuelpichardom@gmail.com">manuelpichardom@gmail.com</a>
 	                <h4>+33 7 51 34 74 24</h4>
 									<div id="connections">
 										<br/>
@@ -49,7 +49,7 @@
                         </header>
  <p>
 
-                        <big><b>I am very interested in science outreach both in English and Spanish (my native language). This are some projects I have been involved. </big></b></p>
+                        <big><b>I am very interested in science outreach both in English and Spanish (my native language). These are some of the projects I have been involved with. </big></b></p>
 
                         <h3> Astrobitos </h3>
 			<a href='astrobitos.org'>Astrobitos</a> is the sister site in Spanish of <a href='astrobites.com'>Astrobites</a>. 
@@ -57,7 +57,7 @@
                 <h2>Spread the voice in Spanish!</h2>
                         <p>
 
-			If you are interested to created or translate existing material from English to Spanish I might be able to help. Please feel free to contact me <a href="mailto:manuelmarcano22@yahoo.com">via email</a> </p>
+			If you are interested to create or translate existing material from English to Spanish I might be able to help. Please feel free to contact me <a href="mailto:manuelpichardom@gmail.com">via email</a> </p>
                         </section>
                         <footer>
                         <small>forked from <br><a href="http://kiwigrove.com/" title="Kiwi Grove">Kiwi Grove</a></small>
