--- a/pubs.html
+++ b/pubs.html
@@ -31,7 +31,7 @@
 	            <a href="#">Contact Info</a>
 	            <div id="contact_info" style="display:none">
 	                <h3>Manuel Pichardo M.</h3>
-	                <a href="mailto:mail@manuelpm.me">mail@manuelpm.me</a>
+	                <a href="mailto:manuelpichardom@gmail.com">manuelpichardom@gmail.com</a>
 	                <h4>+33 7 51 34 74 24</h4>
 									<div id="connections">
 										<br/>
@@ -44,11 +44,11 @@
 	    </header>
                         <section id="content">
                         <header>
-                        <h1>Work</h1>
+                        <h1>Publications</h1>
                         </header>
                         <p>
 
-                        <h2>Please download my papers and talks here</h2>
+                        <h2>Please download my papers and talks below:</h2>
 			
 			<ul>
                                 <li>
@@ -69,9 +69,9 @@
 
 			<ul>
                                 <li>
-					Measuring Water Level Fluctuations of Two Connected Welands in the Dominican Reublic Using InSAR.
+					Measuring Water Level Fluctuations of Two Connected Wetlands in the Dominican Republic Using InSAR.
                                 <br /> August 2012.
-                                 [<a href="http://manuelmarcano22.github.io/papers/posterhao.pdf">Poster</a>]
+                                 [<a href="http://manuelmarcano22.github.io/papers/posterinsar.pdf">Poster</a>]
                                 </li>
 			</ul>
 
