--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	            <a href="#">Contact Info</a>
 	            <div id="contact_info" style="display:none">
 	                <h3>Manuel Pichardo M.</h3>
-	                <a href="mailto:mail@manuelpm.me">mail@manuelpm.me</a>
+	                <a href="mailto:manuelpichardom@gmail.com">manuelpichardom@gmail.com</a>
 	                <h4>+33 7 51 34 74 24</h4>
 									<div id="connections">
 										<br/>
