--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
                         </p>
                         <h3>My Master's</h3>
                         <p>
-			... is in Space Science and Technology. It is part of the Erasmus Mundus <a href='http://spacemaster.eu/'>SpaceMaster</a> program. It took me to four different universities and four different countries. First semester in Germany at the <a href='http://www.uni-wuerzburg.de/en/ueber/university/'>University of Würzburg</a>. Second semester above the arctic circle in <a href='http://www.ltu.se/?l=en'>Luleå University of Technology</a>, and finally France at  <a href='http://www.univ-tlse3.fr/'>Université Paul Sabatier</a>. Summer this year I worked with <a href='http://www.astro.gla.ac.uk/~martin/'>Martin Hendrey</a> at the <a href='http://www.gla.ac.uk/'>University of Glasgow</a>.
+			... is in Space Science and Technology. It is part of the Erasmus Mundus <a href='http://spacemaster.eu/'>SpaceMaster</a> program. It took me to four different universities and four different countries. First semester in Germany at the <a href='http://www.uni-wuerzburg.de/en/ueber/university/'>University of Würzburg</a>. Second semester above the arctic circle in <a href='http://www.ltu.se/?l=en'>Luleå University of Technology</a>, and finally France at  <a href='http://www.univ-tlse3.fr/'>Université Paul Sabatier</a>. Summer this year I worked with <a href='http://www.astro.gla.ac.uk/~martin/'>Martin Hendry</a> at the <a href='http://www.gla.ac.uk/'>University of Glasgow</a>.
 			</p>
                         <footer>
                         <small>forked from <br><a href="http://kiwigrove.com/" title="Kiwi Grove">Kiwi Grove</a></small>
