--- a/code.html
+++ b/code.html
@@ -45,37 +45,17 @@
 	    </header>
                         <section id="content">
                         <header>
-                        <h1>Publications</h1>
+                        <h1>Code</h1>
+                        <h2>Software Projects and Data Products</h2>
                         </header>
                         <p>
-
-                        <h2>Please download my papers and talks below:</h2>
+<big><b>You'll find most of the code I write for my projects in my GitHub page.</big></b></p>
 			
 			<ul>
-                                <li>
-					Limiting alternative theories of gravity using gravitational wave observations across the spectrum.
-                                <br /> November 2014.
-                                 [<a href="http://arxiv.org/abs/1311.3153">preprint</a>]
-                                </li>
-			</ul>
-
-			<ul>
-                                <li>
-					Big Flare Hunting
-                                <br /> August 2013.
-                                 [<a href="http://manuelmarcano22.github.io/papers/posterhao.pdf">Poster</a>]
-                                </li>
-			</ul>
-
-
-			<ul>
-                                <li>
-					Measuring Water Level Fluctuations of Two Connected Wetlands in the Dominican Republic Using InSAR.
-                                <br /> August 2012.
-                                 [<a href="http://manuelmarcano22.github.io/papers/posterinsar.pdf">Poster</a>]
-                                </li>
-			</ul>
-
+        <li>
+              Projects on <a href="https://github.com/manuelmarcano22/">GitHub</a>
+              </li>
+            </ul>
 
                         </section>
                         <footer>
