--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-	<head>
+        <head profile="http://www.w3.org/2005/10/profile">
 		<meta charset="utf-8"/>
 		<title>Manuel Picharo M</title>
 		<!--[if lt IE 9]>
@@ -10,7 +10,10 @@
 		<link rel="stylesheet" media="all" href="maori.css"/>
 		<link rel="stylesheet" media="all" href="custom.css"/>
 		<meta name = "viewport" content = "initial-scale = .5">
-		
+
+	
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
         <!-- <script type="text/javascript" src="http://use.typekit.com/rds7nju.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script> -->
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
@@ -58,6 +61,7 @@
                                 <li><a href="./about.html" title="Work">About Me</a></li>
                                 <li><a href="http://manuelmarcano22.github.io/papers/cv.pdf" title="Curriculum Vitae">CV</a></li>
                                 <li><a href="./pubs.html" title="Publications">Publications</a></li>
+                                <li><a href="./code.html" title="Code">Code</a></li>
 				<!--        <li><a href="./research.html" title="Research">Research</a></li>  -->
 
                         </ul>
