--- a/outreach.html
+++ b/outreach.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-	<head>
+        <head profile="http://www.w3.org/2005/10/profile">
 		<meta charset="utf-8"/>
 		<title>Manuel Picharo M</title>
 		<!--[if lt IE 9]>
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" media="all" href="maori.css"/>
 		<link rel="stylesheet" media="all" href="custom.css"/>
 		<meta name = "viewport" content = "initial-scale = .5">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
 		
         <!-- <script type="text/javascript" src="http://use.typekit.com/rds7nju.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script> -->
@@ -42,6 +43,7 @@
 	            </div>
 	        </small>
 	    </header>
+	      <div id="wrapper">
                         <section id="content">
                         <header>
                         <h1>Outreach</h1>
