--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
         <head profile="http://www.w3.org/2005/10/profile">
 		<meta charset="utf-8"/>
-		<title>Manuel Picharo M</title>
+        <meta name="description" content="Webpage for Manuel de Jesus Pichardo Marcano ">
+        <meta name="keywords" content="Physics,graduate student">
+        <meta name="author" content="Manuel Pichardo Marcano">
+        <title>Manuel Picharo M</title>
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
