Add MUSE and CV link

--- a/pubs.html
+++ b/pubs.html
@@ -45,11 +45,20 @@
 	    </header>
                         <section id="content">
                         <header>
-                        <h1>Publications</h1>
+                        <h1>Papers, Talks and Posters</h1>
                         </header>
                         <p>
 
-                        <h2>Please download my papers and talks below:</h2>
+                        <h2>You can download any papers, talks and posters below:</h2>
+			
+			<ul>
+                                <li>
+
+                                        MUSE integral field unit observations of the compact objects in the globular cluster NGC 6397
+                                <br /> May 2016.
+                                 [<a href="http://manuelmarcano22.github.io/papers/MUSEposter.pdf">Poster</a>]
+                                </li>
+			</ul>
 			
 			<ul>
                                 <li>
