--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
                })
             });
         </script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-78115739-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+
 	</head>
 	<body>
 	    <header>
@@ -62,8 +74,8 @@
 			<h3>School</h3>
                         <ul>
                                 <li><a href="./about.html" title="Work">About Me</a></li>
-                                <li><a href="http://manuelmarcano22.github.io/papers/cv.pdf" title="Curriculum Vitae">CV</a></li>
-                                <li><a href="./pubs.html" title="Publications">Publications</a></li>
+                                <li><a href="https://github.com/manuelmarcano22/CV/blob/master/cv.pdf" title="Curriculum Vitae">CV</a></li>
+                                <li><a href="./pubs.html" title="Publications, Talks and Posters">Publications, Talks and Posters</a></li>
                                 <li><a href="./code.html" title="Code">Code</a></li>
 				<!--        <li><a href="./research.html" title="Research">Research</a></li>  -->
 
