Update TTU info

--- a/about.html
+++ b/about.html
@@ -33,8 +33,7 @@
 	            <a href="#">Contact Info</a>
 	            <div id="contact_info" style="display:none">
 	                <h3>Manuel Pichardo M.</h3>
-	                <a href="mailto:manuelpichardom@gmail.com">manuelpichardom@gmail.com</a>
-	                <h4>+33 7 51 34 74 24</h4>
+	                <a href="mailto:manuel.pichardo-marcano@ttu.edu">manuel.pichardo-marcano@ttu.edu</a>
 									<div id="connections">
 										<br/>
 										<span>
@@ -50,16 +49,24 @@
                         <section id="content">
                         <header>
                         <h1>I am</h1>
-                        <h2>a physics master's student <br>
+                        <h2>a physics graduate student <br>
                         </header>
 
                         <p>
-                        ... part of the the two year Erasmus Mundus<a href="http://spacemaster.eu/"> Joint European Master in Space Science and Technology</a>. 
+
+                        ... in the Department of Physics and Astronomy at <a href="http://www.depts.ttu.edu/phas/"> Texas Tech University</a>. 
 					       
 			</p>
+
+                        <h2>My research interests</h2>
+                        <p>... involve the study of compact object populations, and accretion and ejection physics.
+                        </p>
+
+
+
+<!--
                         <h2>Currently</h2>
                         <p>
-                        ... in my last year of the master's at Université Paul Sabatier Toulouse III in France <a href="http://ezomp2.omp.obs-mip.fr/asep/">(Master ASEP)</a>.                        <!--
                         </p>
                         <h2>My research interests</h2>
                         <p>... focus on the scientific pursuit of a safe,
@@ -79,11 +86,17 @@
 
 			<h3>My Undergraduate</h3> 
                         <p>
-			... in Physics is from <a href="http://www.usu.edu/">Utah State University</a> in Logan, UT. During those four years I was lucky enough to participate in two undergraduate research experience. In the summer of 2012, I worked at <a href='http://www.stanford.edu/'>Stanford University</a> as part of the <a href='https://oma.stanford.edu/surge/'>SURGE</a> program. In the summer of 2013, I work at the <a href='https://www2.hao.ucar.edu/'>High Altitude Observatory</a>  as part of the <a href='http://lasp.colorado.edu/home/education/reu/'>LASP REU</a>. My final semesters in Utah I was working in a research project with <a href="http://sciencejedi.com/professional/">Dr. Larson</a> in the area of Gravitational Wave Astronomy. If you are interested in the description of such past projects please read my <a href="http://manuelmarcano22.github.io/papers/cv.pdf">CV</a> or check out some of the posters and preprint in the <a href="./pubs.html">publications</a> page.
+			... in Physics is from <a href="http://www.usu.edu/">Utah State University</a> in Logan, UT where I was working on a research project with <a href="http://sciencejedi.com/professional/">Dr. Larson</a> in the area of Gravitational Wave Astronomy. 
+
+		<!--	
+			
+			During those four years I was lucky enough to participate in two undergraduate research experience. In the summer of 2012, I worked at <a href='http://www.stanford.edu/'>Stanford University</a> as part of the <a href='https://oma.stanford.edu/surge/'>SURGE</a> program. In the summer of 2013, I work at the <a href='https://www2.hao.ucar.edu/'>High Altitude Observatory</a>  as part of the <a href='http://lasp.colorado.edu/home/education/reu/'>LASP REU</a>. 			
+			<!--If you are interested in the description of such past projects please read my <a href="http://manuelmarcano22.github.io/papers/cv.pdf">CV</a> or check out some of the posters and preprint in the <a href="./pubs.html">publications</a> page.
+	   -->
                         </p>
                         <h3>My Master's</h3>
                         <p>
-			... is in Space Science and Technology. It is part of the Erasmus Mundus <a href='http://spacemaster.eu/'>SpaceMaster</a> program. It took me to four different universities and four different countries. First semester in Germany at the <a href='http://www.uni-wuerzburg.de/en/ueber/university/'>University of Würzburg</a>. Second semester above the arctic circle in <a href='http://www.ltu.se/?l=en'>Luleå University of Technology</a>, and finally France at  <a href='http://www.univ-tlse3.fr/'>Université Paul Sabatier</a>. Summer this year I worked with <a href='http://www.astro.gla.ac.uk/~martin/'>Martin Hendry</a> at the <a href='http://www.gla.ac.uk/'>University of Glasgow</a>.
+			... is in Space Science and Technology. It is part of the Erasmus Mundus <a href='http://spacemaster.eu/'>SpaceMaster</a> program. It took me to four different universities and four different countries. First semester in Germany at the <a href='http://www.uni-wuerzburg.de/en/ueber/university/'>University of Würzburg</a>. Second semester above the arctic circle in <a href='http://www.ltu.se/?l=en'>Luleå University of Technology</a>, and finally France at  <a href='http://www.univ-tlse3.fr/'>Université Paul Sabatier</a> where I worked under the supervision of <a href="http://userpages.irap.omp.eu/~nwebb/">Natalie Webb</a> on <a href="http://manuelpm.me/MThesis/">MUSE integral field unit observation of the compact objects in the globular cluster NGC 6397</a>
 			</p>
                         <footer>
                         <small>forked from <br><a href="http://kiwigrove.com/" title="Kiwi Grove">Kiwi Grove</a></small>
