--- a/code.html
+++ b/code.html
@@ -32,8 +32,7 @@
 	            <a href="#">Contact Info</a>
 	            <div id="contact_info" style="display:none">
 	                <h3>Manuel Pichardo M.</h3>
-	                <a href="mailto:manuelpichardom@gmail.com">manuelpichardom@gmail.com</a>
-	                <h4>+33 7 51 34 74 24</h4>
+	                <a href="mailto:manuel.pichardo-marcano@ttu.edu">manuel.pichardo-marcano@ttu.edu</a>
 									<div id="connections">
 										<br/>
 										<span>
