--- a/outreach.html
+++ b/outreach.html
@@ -32,8 +32,7 @@
 	            <a href="#">Contact Info</a>
 	            <div id="contact_info" style="display:none">
 	                <h3>Manuel Pichardo M.</h3>
-	                <a href="mailto:manuelpichardom@gmail.com">manuelpichardom@gmail.com</a>
-	                <h4>+33 7 51 34 74 24</h4>
+	                <a href="mailto:manuel.pichardo-marcano@ttu.edu">manuel.pichardo-marcano@ttu.edu</a>
 									<div id="connections">
 										<br/>
 										<span>
@@ -54,7 +53,7 @@
                         <big><b>I am very interested in science outreach both in English and Spanish (my native language). These are some of the projects I have been involved with. </big></b></p>
 
                         <h3> Astrobitos </h3>
-			<a href='https://astrobitos.org/'>Astrobitos</a> is the sister site in Spanish of <a href='astrobites.com'>Astrobites</a>. 
+			<a href='https://astrobitos.org/author/manuelmarcano22/'>Astrobitos</a> is the sister site in Spanish of <a href='https://astrobites.org/'>Astrobites</a>. 
 			
                 <h2>Spread the voice in Spanish!</h2>
                         <p>
