--- a/pubs.html
+++ b/pubs.html
@@ -32,8 +32,7 @@
 	            <a href="#">Contact Info</a>
 	            <div id="contact_info" style="display:none">
 	                <h3>Manuel Pichardo M.</h3>
-	                <a href="mailto:manuelpichardom@gmail.com">manuelpichardom@gmail.com</a>
-	                <h4>+33 7 51 34 74 24</h4>
+	                <a href="mailto:manuel.pichardo-marcano@ttu.edu">manuel.pichardo-marcano@ttu.edu</a>
 									<div id="connections">
 										<br/>
 										<span>
@@ -53,10 +52,29 @@
 			
 			<ul>
                                 <li>
+                                Search for me on <a href="https://ui.adsabs.harvard.edu/#search/q=author%3A%22Pichardo%20Marcano%2C%20Manuel%22&sort=date%20desc%2C%20bibcode%20desc">ADS</a>
+                                </li>
+			</ul>
+
+
+
+			<ul>
+                                <li>
+  The detection of Rossby-like waves on the Sun
+                                <br /> Feb 2017.
+                                 [<a href="http://dx.doi.org/10.1038/s41550-017-0086">Paper</a>]
+                                </li>
+			</ul>
+
+
+			<ul>
+
+                                <li>
 
                                         MUSE integral field unit observations of the compact objects in the globular cluster NGC 6397
                                 <br /> May 2016.
-                                 [<a href="http://manuelmarcano22.github.io/papers/MUSEposter.pdf">Poster</a>]
+				[<a href="http://manuelmarcano22.github.io/papers/MUSEposter.pdf">Poster</a>] [<a href="http://manuelpm.me/MThesis/">Project</a>
+				]
                                 </li>
 			</ul>
 			
